[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/ui/hud/PlayerControls.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/ui/Game.gd" type="Script" id=2]
[ext_resource path="res://src/game/maps/GameMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/close_button_icon.png" type="Texture" id=4]
[ext_resource path="res://src/ui/hud/HealthBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/Default_normal.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/styles/button_stylebox.tres" type="StyleBox" id=7]
[ext_resource path="res://assets/images/tile_ground_sprite.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/Default_title.tres" type="DynamicFont" id=9]
[ext_resource path="res://src/ui/MenuEnvironment.tres" type="Environment" id=10]

[sub_resource type="StyleBoxLine" id=2]
thickness = 5
vertical = true

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="GameMap" parent="." instance=ExtResource( 3 )]

[node name="StartScreen" type="CanvasLayer" parent="."]
layer = 4
visible = false

[node name="TextureRect" type="TextureRect" parent="StartScreen"]
modulate = Color( 0.12549, 0.12549, 0.12549, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
stretch_mode = 2

[node name="Label" type="Label" parent="StartScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.0
margin_top = -63.5
margin_right = 219.0
margin_bottom = 63.5
custom_fonts/font = ExtResource( 9 )
text = "Loading..."

[node name="EscapeScreen" type="CanvasLayer" parent="."]

[node name="CloseButton" type="Button" parent="EscapeScreen"]
self_modulate = Color( 1.50196, 1, 1, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -192.0
margin_top = 64.0
margin_right = -64.0
margin_bottom = 192.0
rect_pivot_offset = Vector2( 64, 64 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
action_mode = 0
icon = ExtResource( 4 )
flat = true
align = 0
icon_align = 1
expand_icon = true

[node name="Panel" type="Panel" parent="EscapeScreen"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="EscapeScreen/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.75 )

[node name="QuitButton" type="Button" parent="EscapeScreen/Panel"]
self_modulate = Color( 1, 1.5, 1.5, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -576.0
margin_top = -92.0
margin_right = -64.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
action_mode = 0
text = "Quit Game"

[node name="ContinueButton" type="Button" parent="EscapeScreen/Panel"]
self_modulate = Color( 1, 1.5, 1.5, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 64.0
margin_top = -92.0
margin_right = 576.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
action_mode = 0
text = "Continue"

[node name="EndScreen" type="CanvasLayer" parent="."]
layer = 4
visible = false

[node name="TextureRect" type="TextureRect" parent="EndScreen"]
modulate = Color( 0.12549, 0.12549, 0.12549, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
stretch_mode = 2

[node name="WinnerLabel" type="Label" parent="EndScreen"]
self_modulate = Color( 1.5, 1, 1.5, 1 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -63.5
margin_bottom = 63.5
custom_fonts/font = ExtResource( 9 )
text = "X is the winner"
align = 1

[node name="ExitButton" type="Button" parent="EndScreen"]
self_modulate = Color( 1, 1.5, 1.5, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = 292.0
margin_right = 320.0
margin_bottom = 420.0
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
action_mode = 0
text = "Exit"

[node name="PlayerControls" parent="." instance=ExtResource( 1 )]

[node name="HealthBar" parent="." instance=ExtResource( 5 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 10 )

[connection signal="pressed" from="EscapeScreen/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="EscapeScreen/Panel/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="EscapeScreen/Panel/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="EndScreen/ExitButton" to="." method="_on_QuitButton_pressed"]
